se agrega archivo con los resultados del portal de pago

--- a/khipu.ipynb
+++ b/khipu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "1779e608",
    "metadata": {},
    "outputs": [
@@ -12,9 +12,9 @@
      "text": [
       "Status code: 200\n",
       "Respuesta:\n",
-      "{\"app_url\":\"khipu:///pos/4zeszmogrurp\",\"payment_id\":\"4zeszmogrurp\",\"payment_url\":\"https://khipu.com/payment/info/4zeszmogrurp\",\"ready_for_terminal\":false,\"simplified_transfer_url\":\"https://app.khipu.com/payment/simplified/4zeszmogrurp\",\"transfer_url\":\"https://khipu.com/payment/manual/4zeszmogrurp\"}\n",
+      "{\"app_url\":\"khipu:///pos/b3rezrpyg2xe\",\"payment_id\":\"b3rezrpyg2xe\",\"payment_url\":\"https://khipu.com/payment/info/b3rezrpyg2xe\",\"ready_for_terminal\":false,\"simplified_transfer_url\":\"https://app.khipu.com/payment/simplified/b3rezrpyg2xe\",\"transfer_url\":\"https://khipu.com/payment/manual/b3rezrpyg2xe\"}\n",
       "✅ Enlace de pago:\n",
-      "https://khipu.com/payment/info/4zeszmogrurp\n"
+      "https://khipu.com/payment/info/b3rezrpyg2xe\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "810e7eb1",
    "metadata": {},
    "outputs": [
@@ -62,46 +62,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El pago se encuentra rechazado❌ .\n",
+      "✅ Estado de Pago aprobado:\n",
       "{\n",
       "    \"amount\": \"1000.0000\",\n",
-      "    \"app_url\": \"khipu:///pos/4zeszmogrurp\",\n",
+      "    \"app_url\": \"khipu:///pos/b3rezrpyg2xe\",\n",
       "    \"attachment_urls\": [],\n",
       "    \"bank\": \"DemoBank\",\n",
-      "    \"bank_account_number\": \"FAKE-5e6e387c-8dfd-451b-aa9d-4168ca7b3cc8\",\n",
+      "    \"bank_account_number\": \"FAKE-ac7b53af-4c96-440e-9fd6-22982076df55\",\n",
       "    \"bank_id\": \"Bawdf\",\n",
       "    \"body\": \"Compra de Prueba integración Khipu\",\n",
       "    \"cancel_url\": \"\",\n",
+      "    \"conciliation_date\": \"2025-05-13T03:39:57.674Z\",\n",
       "    \"currency\": \"CLP\",\n",
       "    \"custom\": \"\",\n",
       "    \"discount\": \"0.0000\",\n",
-      "    \"expires_date\": \"2025-05-13T03:46:07.406Z\",\n",
+      "    \"expires_date\": \"2025-05-14T03:37:24.630Z\",\n",
       "    \"funds_source\": \"not-available\",\n",
-      "    \"notification_token\": \"e465f8373bbf411a1969d29d6f0693d2922a39544a2798f5a88c8b4054e51751\",\n",
+      "    \"notification_token\": \"8ca19b4ae77804723137588a99a6d762536fbaf0d9fdc5f89faa0c4ce901221d\",\n",
       "    \"notify_api_version\": \"3.0\",\n",
       "    \"notify_url\": \"https://handsome-yottabyte-19.webhook.cool\",\n",
       "    \"out_of_date_conciliation\": false,\n",
       "    \"payer_email\": \"gfruiz@miuandes.cl\",\n",
-      "    \"payer_name\": \"\",\n",
-      "    \"payment_id\": \"4zeszmogrurp\",\n",
+      "    \"payer_name\": \"Cobrador de desarrollo #497.691\",\n",
+      "    \"payment_id\": \"b3rezrpyg2xe\",\n",
       "    \"payment_method\": \"regular_transfer\",\n",
-      "    \"payment_url\": \"https://khipu.com/payment/info/4zeszmogrurp\",\n",
+      "    \"payment_url\": \"https://khipu.com/payment/info/b3rezrpyg2xe\",\n",
       "    \"personal_identifier\": \"17.601.805-4\",\n",
       "    \"picture_url\": \"\",\n",
       "    \"ready_for_terminal\": true,\n",
-      "    \"receipt_url\": \"\",\n",
+      "    \"receipt_url\": \"https://s3.amazonaws.com/notifications.khipu.com/CPKH-1205252337-b3rezrpyg2xe.pdf\",\n",
       "    \"receiver_id\": 497691,\n",
       "    \"responsible_user_email\": \"gfruiz@miuandes.cl\",\n",
       "    \"return_url\": \"\",\n",
       "    \"send_email\": false,\n",
       "    \"send_reminders\": false,\n",
-      "    \"simplified_transfer_url\": \"https://app.khipu.com/payment/simplified/4zeszmogrurp\",\n",
-      "    \"status\": \"verifying\",\n",
-      "    \"status_detail\": \"pending\",\n",
+      "    \"simplified_transfer_url\": \"https://app.khipu.com/payment/simplified/b3rezrpyg2xe\",\n",
+      "    \"status\": \"done\",\n",
+      "    \"status_detail\": \"normal\",\n",
       "    \"subject\": \"Compra de prueba\",\n",
       "    \"third_party_authorization_details\": \"\",\n",
       "    \"transaction_id\": \"\",\n",
-      "    \"transfer_url\": \"https://khipu.com/payment/manual/4zeszmogrurp\"\n",
+      "    \"transfer_url\": \"https://khipu.com/payment/manual/b3rezrpyg2xe\"\n",
       "}\n"
      ]
     }
@@ -132,7 +133,7 @@
     "        print(\"✅ Estado de Pago aprobado:\")\n",
     "        print(json.dumps(data, indent=4, ensure_ascii=False))\n",
     "        break\n",
-    "    elif status == \"pending\":\n",
+    "    elif status == \"verifying\":\n",
     "        print(\"⏳ El pago aún se encuentra pendiente. Reintentando en 30 segundos...\")\n",
     "        time.sleep(60)  # Espera 5 segundos antes de volver a consultar\n",
     "    else:\n",
